--- a/css/stilos.css
+++ b/css/stilos.css
@@ -1,6 +1,46 @@
 body{
-    text-align: center;
-    background-color: aqua;
+    background-color: rgb(33, 52, 52);
     font-family: 'Times New Roman', Times, serif;
-    color: rgb(234, 172, 172);
+    color: rgb(45, 36, 36);
+}
+
+main{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contenedor-post{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    border: 1px solid black;
+    background-color: rgb(4, 196, 196);
+    box-sizing: border-box;
+}
+
+.contenedor-post{
+    text-align: center;
+    font-size: 70%;
+}
+
+.alineadorelementos{
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+}
+
+.alineadorelementos article{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 120%;
+    color: rgb(53, 49, 49);
+}
+
+.alineadorelementos img{
+    border: 2px solid black;
+    margin-left: 20px;
+    border-radius: 20%;
+    width: 30%;
 }
