--- a/css/stilos.css
+++ b/css/stilos.css
@@ -44,3 +44,9 @@ main{
     border-radius: 20%;
     width: 30%;
 }
+
+.caminito-Tortugas{
+    width: 100%;
+    height: 10%;
+    background-color: aquamarine;
+}
